Fixed a few problems on firefox

--- a/static/sass/common/form/button.scss
+++ b/static/sass/common/form/button.scss
@@ -2,6 +2,7 @@ button.button-default {
   border: 25px;
   border-image-slice: 20 fill;
   border-image-source: url(../../../image/button_gray.png);
+  border-style:solid;
 
   background-color: transparent;
 
