--- a/static/sass/common/form/input.scss
+++ b/static/sass/common/form/input.scss
@@ -1,6 +1,7 @@
 input.form-control {
   border: 10px;
   border-image-source: url(../../../image/text_input.png);
+  border-style:solid;
   border-image-slice: 22 fill;
   background: transparent;
   height: 38px;
