--- a/static/sass/common/panel/panel.scss
+++ b/static/sass/common/panel/panel.scss
@@ -6,6 +6,7 @@
   border-image-source: url(../../../image/c_full_header.png);
   border-image-slice: 100 30 30 30 fill;
   border-image-repeat: repeat;
+  border-style:solid;
 
   margin-bottom: 0;
 
