--- a/static/sass/partial/character/inventory.scss
+++ b/static/sass/partial/character/inventory.scss
@@ -30,6 +30,7 @@
     border-image-source: url(../../../image/c_full.png);
     border-image-slice: 30 fill;
     border-image-repeat: repeat;
+    border-style:solid;
     margin: 0;
 
     .inventory-entry {
