--- a/static/sass/partial/character/skills.scss
+++ b/static/sass/partial/character/skills.scss
@@ -3,6 +3,7 @@
     border-image-source: url(../../../image/c_full.png);
     border-image-slice: 30 fill;
     border-image-repeat: repeat;
+    border-style:solid;
 
     height: 220px;
 
