--- a/static/sass/partial/login/login-form.scss
+++ b/static/sass/partial/login/login-form.scss
@@ -16,6 +16,7 @@
     border-image-source: url(../../../image/select_dropdown_container.png);
     border-image-slice: 5 fill;
     border-image-repeat: repeat;
+    border-style:solid;
     background: transparent;
   }
 }
